testsuite/tests/typecheck/should_fail/T17563.hs
{-# LANGUAGE QuantifiedConstraints #-}

module T17563 where

blah :: (forall a. a b ~ a c) => b -> c
blah = undefined
